Fixed card addon z-index bug

--- a/dev/scss/components/_cards.scss
+++ b/dev/scss/components/_cards.scss
@@ -137,7 +137,6 @@
     top: 100%;
     width: 100%;
     max-height: 0px;
-    z-index: gg-z(raised);
     overflow: hidden;
     @extend %gg-shadow-high;
     background: $gg-color-body-background;
